@@ -31,7 +31,7 @@ requires:
   Indent: 0.01
   Indent::Block: 0.01
   Indent::Word: 0.01
-  List::MoreUtils: 0
+  List::Util: 1.33
   Readonly: 0
   Tags::Output: 0.1
   Tags::Utils: 0.09
