@@ -21,7 +21,7 @@ requires 'Error::Pure' => 0.05;
 requires 'Indent' => 0.01;
 requires 'Indent::Word' => 0.01;
 requires 'Indent::Block' => 0.01;
-requires 'List::MoreUtils' => 0;
+requires 'List::Util' => 1.33;
 requires 'Readonly' => 0;
 requires 'Tags::Output' => 0.10;
 requires 'Tags::Utils' => 0.09;
