@@ -233,8 +233,8 @@ EXAMPLE
      # </text>
 
 DEPENDENCIES
-    Error::Pure, Indent, Indent::Word, Indent::Block, List::MoreUtils,
-    Readonly, Tags::Utils::Preserve.
+    Error::Pure, Indent, Indent::Word, Indent::Block, List::Util, Readonly,
+    Tags::Utils::Preserve.
 
 SEE ALSO
     Tags
