@@ -1,4 +1,5 @@
 0.10
+ - Rewrite from List::MoreUtils to List::Util.
  - Update copyright years.
 
 0.09 2022-11-02T23:16:46+01:00
